// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildLayout 全节点样例快照 > docx 渲染器：体现导出侧现状（默认配置） 1`] = `
{
  "blocks": [
    {
      "alignment": "center",
      "indent": {},
      "kind": "paragraph",
      "runs": [
        {
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "方正小标宋_GBK",
            "hAnsi": "方正小标宋_GBK",
          },
          "role": "title",
          "sizeHalfPt": 44,
          "text": "某某市人民政府办公室",
        },
      ],
      "sourceLineNumber": 1,
      "sourceType": "DOCUMENT_TITLE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "center",
      "indent": {},
      "kind": "paragraph",
      "runs": [
        {
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "方正小标宋_GBK",
            "hAnsi": "方正小标宋_GBK",
          },
          "role": "title",
          "sizeHalfPt": 44,
          "text": "关于印发《公文排版管理办法》的通知",
        },
      ],
      "sourceLineNumber": 2,
      "sourceType": "DOCUMENT_TITLE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "仿宋_GB2312",
      },
      "kind": "spacer",
      "lineTwips": 592,
      "lines": 1,
      "reason": "after-title",
      "sizeHalfPt": 32,
    },
    {
      "alignment": "justified",
      "indent": {
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "addressee",
          "sizeHalfPt": 32,
          "text": "各县（市、区）人民政府，市政府各部门：",
        },
      ],
      "sourceLineNumber": 4,
      "sourceType": "ADDRESSEE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "为规范公文排版工作，提高公文处理质量，经市政府同意，现将《公文排版管理办法》印发给你们，请认真贯彻执行。",
        },
      ],
      "sourceLineNumber": 5,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "黑体",
            "hAnsi": "黑体",
          },
          "role": "heading1",
          "sizeHalfPt": 32,
          "text": "一、总体要求。",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "坚持以体式规范为基准，以要件齐全为底线。",
        },
      ],
      "sourceLineNumber": 6,
      "sourceType": "HEADING_1",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "公文排版应当符合党政机关公文格式国家标准，做到整洁美观、庄重规范。",
        },
      ],
      "sourceLineNumber": 7,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "楷体_GB2312",
            "hAnsi": "楷体_GB2312",
          },
          "role": "heading2",
          "sizeHalfPt": 32,
          "text": "（一）指导思想。",
        },
      ],
      "sourceLineNumber": 8,
      "sourceType": "HEADING_2",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "以提升公文质量为核心，强化格式规范的刚性约束。",
        },
      ],
      "sourceLineNumber": 9,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "heading3",
          "sizeHalfPt": 32,
          "text": "1",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "heading3",
          "sizeHalfPt": 32,
          "text": "加强组织领导。",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "要压实各方责任。",
        },
      ],
      "sourceLineNumber": 10,
      "sourceType": "HEADING_3",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "各部门主要负责同志是本部门公文质量的第一责任人。",
        },
      ],
      "sourceLineNumber": 11,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "（1）制定实施方案。",
        },
      ],
      "sourceLineNumber": 12,
      "sourceType": "HEADING_4",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "会议时间为",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "9",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ":",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "00",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "至",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "11",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ":",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "30",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "，请提前入场。",
        },
      ],
      "sourceLineNumber": 13,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "boldHeader": true,
      "cellAlignment": "center",
      "dataRows": [
        [
          "1",
          "制定方案",
          "办公室",
        ],
        [
          "2",
          "组织培训",
          "人事科",
        ],
      ],
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "Times New Roman",
      },
      "headerCells": [
        "序号",
        "事项",
        "责任单位",
      ],
      "kind": "table",
      "lineTwips": 440,
      "sizeHalfPt": 24,
      "sourceType": "TABLE",
    },
    {
      "alignment": "justified",
      "attachmentVariant": "multi-first",
      "indent": {
        "hangingTwips": 945,
        "leftTwips": 1575,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "附件：",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "1",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "公文排版管理办法",
        },
      ],
      "sourceLineNumber": 15,
      "sourceType": "ATTACHMENT",
      "spacing": {
        "beforeTwips": 592,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "attachmentVariant": "multi-item",
      "indent": {
        "leftTwips": 1575,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "2",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "公文格式自查清单",
        },
      ],
      "sourceLineNumber": 15,
      "sourceType": "ATTACHMENT",
      "spacing": {
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "attachmentVariant": "multi-item",
      "indent": {
        "leftTwips": 1575,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "3",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "责任分工表",
        },
      ],
      "sourceLineNumber": 15,
      "sourceType": "ATTACHMENT",
      "spacing": {
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "仿宋_GB2312",
      },
      "kind": "spacer",
      "lineTwips": 592,
      "lines": 2,
      "reason": "before-signature",
      "sizeHalfPt": 32,
    },
    {
      "alignment": "right",
      "indent": {
        "rightTwips": 630,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "某某市人民政府办公室",
        },
      ],
      "sourceLineNumber": 16,
      "sourceType": "SIGNATURE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "right",
      "indent": {
        "rightTwips": 630,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "二零二六年九月十一日",
        },
      ],
      "sourceLineNumber": 17,
      "sourceType": "DATE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "仿宋_GB2312",
      },
      "kind": "spacer",
      "lineTwips": 592,
      "lines": 2,
      "reason": "before-remark",
      "sizeHalfPt": 32,
    },
    {
      "alignment": "left",
      "indent": {
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "（联系人：张三，电话0001-1234567）",
        },
      ],
      "sourceLineNumber": 18,
      "sourceType": "REMARK",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
  ],
  "footerNote": null,
  "header": null,
  "metrics": {
    "charSpacingTwips": -5,
    "charWidthTwips": 315,
    "firstLineIndentTwips": 630,
  },
  "pageNumber": {
    "enabled": true,
    "evenAlignment": "left",
    "font": {
      "ascii": "宋体",
      "cs": "宋体",
      "eastAsia": "宋体",
      "hAnsi": "宋体",
    },
    "format": "dash-number-dash",
    "oddAlignment": "right",
    "oneCharIndentTwips": 280,
    "sizeHalfPt": 28,
    "vertical": {
      "beforeTwips": 397,
      "mechanism": "footer-spacing-before",
    },
  },
  "renderer": "docx",
}
`;

exports[`buildLayout 全节点样例快照 > preview 渲染器：体现预览侧现状（默认配置） 1`] = `
{
  "blocks": [
    {
      "alignment": "center",
      "indent": {},
      "kind": "paragraph",
      "runs": [
        {
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "方正小标宋_GBK",
            "hAnsi": "方正小标宋_GBK",
          },
          "role": "title",
          "sizeHalfPt": 44,
          "text": "某某市人民政府办公室",
        },
      ],
      "sourceLineNumber": 1,
      "sourceType": "DOCUMENT_TITLE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "center",
      "indent": {},
      "kind": "paragraph",
      "runs": [
        {
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "方正小标宋_GBK",
            "hAnsi": "方正小标宋_GBK",
          },
          "role": "title",
          "sizeHalfPt": 44,
          "text": "关于印发《公文排版管理办法》的通知",
        },
      ],
      "sourceLineNumber": 2,
      "sourceType": "DOCUMENT_TITLE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "仿宋_GB2312",
      },
      "kind": "spacer",
      "lineTwips": 592,
      "lines": 1,
      "reason": "after-title",
      "sizeHalfPt": 32,
    },
    {
      "alignment": "justified",
      "indent": {
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "addressee",
          "sizeHalfPt": 32,
          "text": "各县（市、区）人民政府，市政府各部门：",
        },
      ],
      "sourceLineNumber": 4,
      "sourceType": "ADDRESSEE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "为规范公文排版工作，提高公文处理质量，经市政府同意，现将《公文排版管理办法》印发给你们，请认真贯彻执行。",
        },
      ],
      "sourceLineNumber": 5,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "黑体",
            "hAnsi": "黑体",
          },
          "role": "heading1",
          "sizeHalfPt": 32,
          "text": "一、总体要求。",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "坚持以体式规范为基准，以要件齐全为底线。",
        },
      ],
      "sourceLineNumber": 6,
      "sourceType": "HEADING_1",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "公文排版应当符合党政机关公文格式国家标准，做到整洁美观、庄重规范。",
        },
      ],
      "sourceLineNumber": 7,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "楷体_GB2312",
            "hAnsi": "楷体_GB2312",
          },
          "role": "heading2",
          "sizeHalfPt": 32,
          "text": "（一）指导思想。",
        },
      ],
      "sourceLineNumber": 8,
      "sourceType": "HEADING_2",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "以提升公文质量为核心，强化格式规范的刚性约束。",
        },
      ],
      "sourceLineNumber": 9,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "heading3",
          "sizeHalfPt": 32,
          "text": "1",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "heading3",
          "sizeHalfPt": 32,
          "text": "加强组织领导。",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "要压实各方责任。",
        },
      ],
      "sourceLineNumber": 10,
      "sourceType": "HEADING_3",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "各部门主要负责同志是本部门公文质量的第一责任人。",
        },
      ],
      "sourceLineNumber": 11,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "（1）制定实施方案。",
        },
      ],
      "sourceLineNumber": 12,
      "sourceType": "HEADING_4",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "会议时间为",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "9",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ":",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "00",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "至",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "11",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ":",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "30",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "，请提前入场。",
        },
      ],
      "sourceLineNumber": 13,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "boldHeader": true,
      "cellAlignment": "center",
      "dataRows": [
        [
          "1",
          "制定方案",
          "办公室",
        ],
        [
          "2",
          "组织培训",
          "人事科",
        ],
      ],
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "Times New Roman",
      },
      "headerCells": [
        "序号",
        "事项",
        "责任单位",
      ],
      "kind": "table",
      "lineTwips": 440,
      "sizeHalfPt": 24,
      "sourceType": "TABLE",
    },
    {
      "alignment": "justified",
      "attachmentVariant": "multi-first",
      "indent": {
        "hangingTwips": 945,
        "leftTwips": 1575,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "附件：",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "1",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "公文排版管理办法",
        },
      ],
      "sourceLineNumber": 15,
      "sourceType": "ATTACHMENT",
      "spacing": {
        "beforeTwips": 592,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "attachmentVariant": "multi-item",
      "indent": {
        "leftTwips": 1575,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "2",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "公文格式自查清单",
        },
      ],
      "sourceLineNumber": 15,
      "sourceType": "ATTACHMENT",
      "spacing": {
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "justified",
      "attachmentVariant": "multi-item",
      "indent": {
        "leftTwips": 1575,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "3",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "仿宋_GB2312",
            "cs": "仿宋_GB2312",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "bodyPunct",
          "sizeHalfPt": 32,
          "text": ".",
        },
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "责任分工表",
        },
      ],
      "sourceLineNumber": 15,
      "sourceType": "ATTACHMENT",
      "spacing": {
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "仿宋_GB2312",
      },
      "kind": "spacer",
      "lineTwips": 592,
      "lines": 2,
      "reason": "before-signature",
      "sizeHalfPt": 32,
    },
    {
      "alignment": "right",
      "indent": {
        "rightEm": 2,
        "rightTwips": 630,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "某某市人民政府办公室",
        },
      ],
      "sourceLineNumber": 16,
      "sourceType": "SIGNATURE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "alignment": "right",
      "indent": {
        "rightTwips": 630,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "二零二六年九月十一日",
        },
      ],
      "sourceLineNumber": 17,
      "sourceType": "DATE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "仿宋_GB2312",
      },
      "kind": "spacer",
      "lineTwips": 592,
      "lines": 2,
      "reason": "before-remark",
      "sizeHalfPt": 32,
    },
    {
      "alignment": "left",
      "indent": {
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "（联系人：张三，电话0001-1234567）",
        },
      ],
      "sourceLineNumber": 18,
      "sourceType": "REMARK",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
  ],
  "footerNote": null,
  "header": null,
  "metrics": {
    "charSpacingTwips": -5,
    "charWidthTwips": 315,
    "firstLineIndentTwips": 630,
  },
  "pageNumber": {
    "enabled": true,
    "evenAlignment": "left",
    "font": {
      "ascii": "宋体",
      "cs": "宋体",
      "eastAsia": "宋体",
      "hAnsi": "宋体",
    },
    "format": "dash-number-dash",
    "oddAlignment": "right",
    "oneCharIndentTwips": 280,
    "sizeHalfPt": 28,
    "vertical": {
      "bottomPercent": 4.2,
      "mechanism": "css-bottom-percent",
    },
  },
  "renderer": "preview",
}
`;

exports[`buildLayout 版头/版记/页码版式参数 > 版头开（含签发人）：机关标志规格、空二行、标题段前距 1184、红线现状参数 1`] = `
{
  "blocks": [
    {
      "alignment": "center",
      "indent": {},
      "kind": "paragraph",
      "runs": [
        {
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "方正小标宋_GBK",
            "hAnsi": "方正小标宋_GBK",
          },
          "role": "title",
          "sizeHalfPt": 44,
          "text": "测试公文标题",
        },
      ],
      "sourceLineNumber": 1,
      "sourceType": "DOCUMENT_TITLE",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 1184,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
    {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "仿宋_GB2312",
        "hAnsi": "仿宋_GB2312",
      },
      "kind": "spacer",
      "lineTwips": 592,
      "lines": 1,
      "reason": "after-title",
      "sizeHalfPt": 32,
    },
    {
      "alignment": "justified",
      "indent": {
        "firstLineTwips": 630,
        "leftTwips": 0,
      },
      "kind": "paragraph",
      "runs": [
        {
          "characterSpacingTwips": -5,
          "font": {
            "ascii": "Times New Roman",
            "cs": "Times New Roman",
            "eastAsia": "仿宋_GB2312",
            "hAnsi": "仿宋_GB2312",
          },
          "role": "body",
          "sizeHalfPt": 32,
          "text": "正文段落内容。",
        },
      ],
      "sourceLineNumber": 1,
      "sourceType": "PARAGRAPH",
      "spacing": {
        "afterTwips": 0,
        "beforeTwips": 0,
        "lineRule": "exact",
        "lineTwips": 592,
      },
    },
  ],
  "footerNote": null,
  "header": {
    "blankLineTwips": 592,
    "blankLinesAfterOrg": 2,
    "docNumber": "某府发〔2026〕12号",
    "metaFont": {
      "ascii": "Times New Roman",
      "cs": "Times New Roman",
      "eastAsia": "仿宋_GB2312",
      "hAnsi": "Times New Roman",
    },
    "metaSizeHalfPt": 32,
    "oneCharIndentTwips": 320,
    "orgName": "某某市人民政府文件",
    "orgNameRun": {
      "font": {
        "ascii": "Times New Roman",
        "cs": "Times New Roman",
        "eastAsia": "方正小标宋_GBK",
        "hAnsi": "Times New Roman",
      },
      "role": "title",
      "sizeHalfPt": 60,
      "text": "某某市人民政府文件",
    },
    "separator": {
      "beforeTwips": 80,
      "color": "E00000",
      "mechanism": "paragraph-border",
      "sizeEighthPt": 15,
    },
    "signer": "李四",
    "signerNameFont": {
      "ascii": "Times New Roman",
      "cs": "Times New Roman",
      "eastAsia": "楷体_GB2312",
      "hAnsi": "Times New Roman",
    },
    "titleSpacingBeforeTwips": 1184,
  },
  "metrics": {
    "charSpacingTwips": -5,
    "charWidthTwips": 315,
    "firstLineIndentTwips": 630,
  },
  "pageNumber": {
    "enabled": true,
    "evenAlignment": "left",
    "font": {
      "ascii": "宋体",
      "cs": "宋体",
      "eastAsia": "宋体",
      "hAnsi": "宋体",
    },
    "format": "dash-number-dash",
    "oddAlignment": "right",
    "oneCharIndentTwips": 280,
    "sizeHalfPt": 28,
    "vertical": {
      "beforeTwips": 397,
      "mechanism": "footer-spacing-before",
    },
  },
  "renderer": "docx",
}
`;
